# offline_dx_bundler

./: .gitignore  Cargo.toml  README.md
examples/: manifest_summary.rs
nix/modules/: devshell.nix  rust.nix
src/: builder.rs  config.rs  lib.rs  main.rs  models.rs  project.rs  selection.rs
src/asset_paths/: bundle.rs  candidates.rs  filters.rs  mod.rs
src/bundle/: js_patch.rs  launcher.rs  manifest.rs  mod.rs  site.rs  styles.rs
src/manifest/: generation.rs  markdown.rs  mod.rs  scanning.rs
