cargo-features = ["edition2024"]
[package]
name = "offline_dx_bundler"
version = "0.1.1"
authors = ["Albert O'Shea"]
edition = "2024"
description = "Build-time helpers for preparing Dioxus WASM sites for fully offline delivery."
license = "MIT"
readme = "README.md"
repository = "https://github.com/pivot-marketing/offline_dx_bundler"
categories = ["web-programming", "development-tools"]
keywords = ["dioxus", "offline", "bundler", "static-site"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
gray_matter = "0.3"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
same-file = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23"
